@@ -100,7 +100,6 @@ AC_SUBST(FLTKLIBS_FULL)
 AC_SUBST(DBUS_CFLAGS)
 AC_SUBST(DBUS_LIBS)
 AC_SUBST(SHARED)
-AC_SUBST(LIBTOOL)
 AC_SUBST(ALLFLAGS)
 AC_SUBST(CFLAGS)
 AC_SUBST(CXXFLAGS)
